--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
   </head>
-  <body>
+  <body >
     <header>
-        <img src="assets/images/logo.png" class="logo" alt="logo"/>
-        <h1>Nos photographes</h1>
+      <a href="#" role="image link" aria-label="Liens vers la page d'accueil">
+        <img src="assets/images/logo.png" class="logo"  alt="Logo de Fisheye-Home Page" />
+      </a>  
+        <h1 role="Header" aria-label="Texte statique">Nos photographes</h1>
     </header>
     <main id="main">
         <div class="photographer_section"></div>
+        
     </main>
     <script src="scripts/factories/Photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
