--- a/photographer.html
+++ b/photographer.html
@@ -3,19 +3,27 @@
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"
+    integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Fisheye - photographe </title>
   </head>
   <body>
     <header>
-      <img src="assets/images/logo.png" class="logo" />
+      <a href="index.html" alt="Fisheye Home Page">
+        <img src="assets/images/logo.png" class="logo" alt="Logo of the Fisheye" />
+      </a>
     </header>
     <main id="main">
       <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </div>
+        <button class="contact_button contactButtonPosition" onclick="displayModal()" aria-label="Ouvre la fenetre de contact">Contactez-moi</button>
+      
     </main>
+    <aside id="containerImage">
+
+    </aside>
     <div id="contact_modal">
 			<div class="modal">
 				<header>
@@ -31,6 +39,11 @@
 				</form>
 			</div>
 		</div>
-    <script src="/scripts/utils/contactForm.js"></script>
+    <script src="scripts/api/fishEyesApi.js"></script>
+    <script src="scripts/models/photographerObj.js"></script><!-- Classes are here -->
+    <script src="scripts/pages/photographer.js"></script> 
+    <script src="scripts/utils/contactForm.js"></script>  
+    <script src="scripts/models/mediaObj.js"></script>
+    
   </body>
 </html>
