--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="fr" lang="fr">
   <head>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
   </head>
   <body >
     <header>
-      <a href="#" role="image link" aria-label="Liens vers la page d'accueil">
         <img src="assets/images/logo.png" class="logo"  alt="Logo de Fisheye-Home Page" />
-      </a>  
         <h1 role="Header" aria-label="Texte statique">Nos photographes</h1>
     </header>
     <main id="main">
